fixed overflow issuse on mobile only

--- a/styles/global/_globals.css
+++ b/styles/global/_globals.css
@@ -3,7 +3,6 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-style: normal;
 	  font-weight: 300;
-    overflow-x: hidden;
 }
 
 html,body {
