--- a/styles/layouts/main.module.css
+++ b/styles/layouts/main.module.css
@@ -2,6 +2,9 @@
     position: sticky;
     top: 0;
     left: 0;
-    right: 0;
     z-index: 10;
+}
+
+.content{
+    overflow-x: hidden;
 }
